# J3DMaterializer

./: .gitmodules  CMakeLists.txt  README.md
include/: UApplication.hpp  UCamera.hpp  UMaterialLayer.hpp  UMaterializerApplication.hpp  UMaterializerContext.hpp  UMaterializerIOManager.hpp  UMaterializerMAT3.hpp
include/ui/: UMaterializerColorChannelPanel.hpp  UMaterializerStagePanel.hpp  UMaterializerTexGenPanel.hpp  UMaterializerTexMatrixPanel.hpp  UMaterializerUIPanel.hpp
include/util/: UComponentSet.hpp
lib/: CMakeLists.txt
src/: UCamera.cpp  UGrid.cpp  UMaterializerApplication.cpp  UMaterializerContext.cpp  UMaterializerIOManager.cpp  UMaterializerMAT3.cpp  main.cpp
src/ui/: UMaterializerColorChannelPanel.cpp  UMaterializerStagePanel.cpp  UMaterializerTexGenPanel.cpp  UMaterializerTexMatrixPanel.cpp  UMaterializerUIPanel.cpp
